# copy_data_

./: .gitignore  Cargo.toml  Checklist.md  HOW_TO_RUN.md  README.md  checkthisforbuy.md  copytrader-bot.service  run_bot.sh  setup_git.sh
configs/: config.example.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  sol_price.rs
crates/db/: Cargo.toml
crates/db/src/: discovery.rs  lib.rs  raw_events.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/exec_bot/: Cargo.toml
crates/exec_bot/src/: main.rs
crates/grpc_subscriber/: Cargo.toml
crates/grpc_subscriber/src/: main.rs
docs/: ACTION_TYPES.md  BOT_PERFORMANCE_REPORT.md  CLEANUP_SUMMARY.md  COMPLETE_EVENT_TRACKING.md  DISCOVERY_INTEGRATION_COMPLETE.md  DISCOVERY_SYSTEM.md  FINAL_CLEANUP.md  FINAL_TWEAKS.md  IMPLEMENTATION_VERIFICATION.md  LK_LIQUIDITY_ANALYSIS.md  LK_LIQUIDITY_TRACKING.md  PLANNING.md  QUICKSTART.md  RUNNING.md  RUNNING_THE_BOT.md  SOL_PRICE_FIX.md  SOL_TRACKING_SUMMARY.md  STATUS.md  WALLET_NAMES_FIX.md  YELLOWSTONE_SETUP.md
migrations/: discovery_schema.sql
scripts/: __init__.py  init_postgres.py  seed_wallets.py
sql/: add_alias_column.sql  add_balance_fields.sql  add_missing_columns.sql  postgres_init.sql  postgres_wallet_roles.sql
