[package]
name = "common"
version = "0.1.0"
authors = ["you <you@example.com>"]
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
tokio = { version = "1", features = ["rt", "time", "sync"] }
reqwest = { version = "0.11", features = ["json"] }

