[package]
name = "exec_bot"
version = "0.1.0"
authors = ["you <you@example.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
common = { path = "../common" }
db = { path = "../db" }

